--- a/GamePortal/frontend/src/app/app.component.html
+++ b/GamePortal/frontend/src/app/app.component.html
@@ -1,3 +1,13 @@
-<h1>
-  {{title}}
-</h1>
+<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+<!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
+<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
+<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
+<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+<!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
+<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+
+
+<app-game2></app-game2>
+<app-colorjumper> </app-colorjumper>
+<app-floppybird></app-floppybird>
+<router-outlet></router-outlet>
