--- a/GamePortal/frontend/src/app/user/user.component.html
+++ b/GamePortal/frontend/src/app/user/user.component.html
@@ -1,14 +1,15 @@
 <table border="1">
     <thead></thead>
     <tr>
-        <th>name</th>
-        <th>designation</th>
+        <th>Username</th>
+        <th>
+            <User_ID/th>
     </tr>
 
     <tbody>
-        <tr *ngFor="let user of Users">
-            <td>{{Users.USERNAME}}</td>
-            <td>{{Users.USER_ID}}</td>
+        <tr *ngFor="let User of Users">
+            <td>{{User.USERNAME}}</td>
+            <td>{{User.USER_ID}}</td>
         </tr>
     </tbody>
 </table>
