--- a/GamePortal/frontend/src/app/app.component.html
+++ b/GamePortal/frontend/src/app/app.component.html
@@ -6,8 +6,6 @@
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-
-<app-game2></app-game2>
-
-<app-floppybird></app-floppybird>
+<app-navbar></app-navbar>
+<app-score></app-score>
 <router-outlet></router-outlet>
