--- a/GamePortal/frontend/src/app/user/user.component.html
+++ b/GamePortal/frontend/src/app/user/user.component.html
@@ -1,9 +1,8 @@
-<table border="1">
+<table class="table table-bordered" border="1">
     <thead></thead>
     <tr>
-        <th>Users</th>
-        <th>
-            User_ID</th>
+        <th> Users </th>
+        <th> User_ID </th>
     </tr>
 
     <tbody>
