--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -25,6 +25,8 @@
                 <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
                     <a class="dropdown-item waves-light" mdbWavesEffect href="#">My account</a>
                     <a class="dropdown-item waves-light" mdbWavesEffect href="#">Log out</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect href="/login">Log in</a>
+
                 </div>
             </li>
 
