--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -17,8 +17,8 @@
           <table class="" cellspacing="0">
             <tr>
               <td>
-                <input matInput matInput id="inputEmail" class="form-control" placeholder="Username" [(ngModel)]="username" name="username" required>
-                
+                <input matInput id="inputEmail" class="form-control" placeholder="Username" [(ngModel)]="username" name="username" required>
+
               </td>
             </tr>
             <tr>
