--- a/frontend/src/app/user/user.component.html
+++ b/frontend/src/app/user/user.component.html
@@ -7,9 +7,8 @@
 
     <tbody>
         <tr *ngFor="let User of Users">
-            <td>{{User.USERNAME}}</td>
-            <td>{{User.USER_ID}}</td>
-            <td>{{User.PASSWORD}}</td>
+            <td>{{User.username}}</td>
+            <td>{{User.user_id}}</td>
         </tr>
     </tbody>
 </table>
