--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -2,19 +2,22 @@
   <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-	crossorigin="anonymous">
-  <span class=example-card>Sleuth</span>
+  crossorigin="anonymous">
+  <div class="box">
+
+  <span>Sleuth</span>
+  <img src="bear.JPG" >
+
   <br>
   <br>
   <link rel="stylesheet" >
-
-  <mat-card class="example-card">
+  <mat-card >
       <mat-card-header>
         <mat-card-title>Login</mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <form class="example-form">
-          <table class="" cellspacing="0">
+          <table >
             <tr>
               <td>
                 <input matInput matInput id="inputEmail" class="form-control" placeholder="Username" [(ngModel)]="username" name="username" required>
@@ -37,6 +40,6 @@
 
       </mat-card-actions>
     </mat-card>
-  
+  </div>
 
     
