--- a/frontend/src/app/login/login.component.scss
+++ b/frontend/src/app/login/login.component.scss
@@ -1,4 +1,5 @@
 .example-card {
+	width: 3px;
     align-content: center;
     text-align: center;
     padding: 1rem;
@@ -11,5 +12,14 @@
 	background-color: #89abc6;
 	text-align: center;
 	padding: 1rem;
+	margin: 1rem;
+}
+
+.box{
+	width: 50%;
+    align-content: center;
+	text-align: center;
+	
+    padding: 1rem;
 	margin: 1rem;
 }
