some frontend login

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -6,8 +6,10 @@
   <div class="box">
 
   <span>Sleuth</span>
-  <img src="bear.JPG" >
+  <br>
+  <img class="logo" src="../../assets/bear.png">
 
+  
   <br>
   <br>
   <link rel="stylesheet" >
@@ -25,7 +27,7 @@
               </td>
             </tr>
             <tr>
-            <td><mat-form-field class="example-full-width">
+            <td><mat-form-field class=" example-full-width">
               <input matInput id="inputEmail" class="form-control" placeholder="Password" [(ngModel)]="password"type="password" name="password" required>
 
             </mat-form-field></td>
