--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -24,7 +24,8 @@
                     <mdb-icon fas icon="user"></mdb-icon> Profile<span class="caret"></span></a>
                 <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
                     <a class="dropdown-item waves-light" mdbWavesEffect href="#">My account</a>
-                    <a class="dropdown-item waves-light" mdbWavesEffect href="#">Log out</a>
+                    <button class="dropdown-item waves-light" mdbWavesEffect href="#" onclick="window.localStorage.clear()">Log out</button>
+
                     <a class="dropdown-item waves-light" mdbWavesEffect href="/login">Log in</a>
 
                 </div>
