Tic Tac restructered and rest button added

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -10,7 +10,7 @@
 <app-score></app-score>
 
 <router-outlet></router-outlet>
+<app-tic-tac-board></app-tic-tac-board>
 <my-board></my-board>
-
 <app-tetris-board></app-tetris-board>
 <router-outlet></router-outlet>
