--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,38 +1,42 @@
 /* You can add global styles to this file, and also import other style files */
 
 #Floppycanvas {
-  border: 1px solid #000000;
-  background-color: #f1f1f1;
+    border: 1px solid #000000;
+    background-color: #f1f1f1;
+}
+
+canvas {
+    margin-top: 10%;
 }
 
 app-user {
-  float: right;
-  padding: 2em;
+    float: right;
+    padding: 2em;
 }
 
 // tetris
 * {
-  font-family: 'Press Start 2P', cursive;
+    font-family: 'Press Start 2P', cursive;
 }
 
 .grid {
-  display: grid;
-  grid-template-columns: 320px 200px;
+    display: grid;
+    grid-template-columns: 320px 200px;
 }
 
 .right-column {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .game-board {
-  border: solid 2px;
+    border: solid 2px;
 }
 
 .play-button {
-  background-color: #4caf50;
-  font-size: 16px;
-  padding: 15px 30px;
-  cursor: pointer;
+    background-color: #4caf50;
+    font-size: 16px;
+    padding: 15px 30px;
+    cursor: pointer;
 }
