--- a/frontend/src/app/login/login.component.scss
+++ b/frontend/src/app/login/login.component.scss
@@ -38,3 +38,7 @@ mat-card {
         margin: 1rem;
     }
 }
+// I want to make the entire background this color to match the BootSwatch Theme, 
+// but I'm unable to get it working inside any of the classes
+
+//	background-color: #1b2833;
