--- a/frontend/src/app/score/score.component.html
+++ b/frontend/src/app/score/score.component.html
@@ -12,7 +12,7 @@
     </tr>
 
     <tbody>
-        <tr class="bg-warning" *ngFor="let Score of MyScores ">
+        <tr class="bg-warning rounded-pill" *ngFor="let Score of MyScores ">
             <td>{{Score.id}}</td>
             <td>{{Score.scores}}</td>
             <td>{{Score.game.description}}</td>
