--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,7 +6,14 @@
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<app-navbar></app-navbar>
-<app-score></app-score>
 
-<router-outlet></router-outlet>
+<html>
+<head>
+<!--<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.css" rel="stylesheet" type="text/css" />-->
+</head>
+<body>
+	<app-navbar></app-navbar>
+	<app-score></app-score>
+	<router-outlet></router-outlet>
+</body>
+</html>
