--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,3 +1,8 @@
+@import "../../node_modules/bootswatch/dist/superhero/variables";
+@import "../../node_modules/bootstrap-scss";
+@import "../../node_modules/bootswatch/dist/superhero/bootswatch";
+@import "../../node_modules/bootswatch/dist/superhero/bootstrap.min.css";
+
 app-score {
     float: right;
     z-index: 1000;
