--- a/frontend/src/app/tetris-board/tetris-board.component.html
+++ b/frontend/src/app/tetris-board/tetris-board.component.html
@@ -1,13 +1,15 @@
 <div class="grid">
-  <canvas #board class="board"></canvas>
-  <div class="right-column">
-    <div>
-      <h1>TETRIS</h1>
-      <p>Score: {{ points }}</p>
-      <p>Lines: {{ lines }}</p>
-      <p>Level: {{ level }}</p>
-      <canvas #next class="next"></canvas>
+    <canvas #board class="game-board"></canvas>
+    <div class="right-column">
+        <div>
+            <h1>TETRIS</h1>
+            <p>Score: {{ points }}</p>
+            <p>Lines: {{ lines }}</p>
+            <p>Level: {{ level }}</p>
+            <canvas #next class="next"></canvas>
+        </div>
+        <button (click)="play()" class="play-button">Play</button>
     </div>
-    <button (click)="play()" class="play-button">Play</button>
-  </div>
 </div>
+
+
