--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,35 +1,10 @@
-	<!--Navbar-->
-	<mdb-navbar
-		SideClass="navbar navbar-expand-lg navbar-primary text-left"
-		font-family="Orbitron" [containerInside]="false"> <!-- Navbar brand -->
-	<a class="navbar-brand mb-5" href="login"> <img
-		src="../../assets/transparentBear.png" width="140" height="100"
-		class="d-inline-block align-middle text-white" alt=""> Sleuth
-	</a> <!-- Collapsible content --> <links> <!-- Links -->
-	<ul class="navbar-nav ml-auto">
-		<li class="nav-item active"><a class="nav-link waves-light"
-			mdbWavesEffect> <mdb-icon fas icon="envelope"></mdb-icon> Contact<span
-				class="sr-only">(current)</span></a></li>
-		<li class="nav-item"><a class="nav-link waves-light"
-			mdbWavesEffect> <mdb-icon fas icon="cog"></mdb-icon> Settings
-		</a></li>
-
-		<!-- Dropdown -->
-		<li class="nav-item dropdown" dropdown><a dropdownToggle
-			mdbWavesEffect type="button"
-			class="nav-link dropdown-toggle waves-light" mdbWavesEffect> <mdb-icon
-					fas icon="user"></mdb-icon> Profile<span class="caret"></span></a>
-			<div *dropdownMenu
-				class="dropdown-menu dropdown-menu-right dropdown dropdown-primary"
-				role="menu">
-				<a class="dropdown-item waves-light" mdbWavesEffect href="#">My
-					account</a> <a class="dropdown-item waves-light" mdbWavesEffect
-					href="#">Log out</a> <a class="dropdown-item waves-light"
-					mdbWavesEffect href="/login">Log in</a>
-
-			</div></li>
-
-
+<!--Navbar-->
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-primary text-left" font-family="Orbitron" [containerInside]="false">
+    <!-- Navbar brand -->
+    <a class="navbar-brand mb-5" href="login"> <img src="../../assets/transparentBear.png" width="140" height="100" class="d-inline-block align-middle text-white" alt=""> Sleuth
+    </a>
+    <!-- Collapsible content -->
+    <links>
         <!-- Links -->
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
@@ -38,7 +13,8 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link waves-light" mdbWavesEffect>
-                    <mdb-icon fas icon="cog"></mdb-icon> Settings</a>
+                    <mdb-icon fas icon="cog"></mdb-icon> Settings
+                </a>
             </li>
 
             <!-- Dropdown -->
@@ -46,10 +22,8 @@
                 <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
                     <mdb-icon fas icon="user"></mdb-icon> Profile<span class="caret"></span></a>
                 <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
-                    <a class="dropdown-item waves-light" mdbWavesEffect href="#">My account</a>
-                    <button class="dropdown-item waves-light" mdbWavesEffect href="/login" onclick="window.localStorage.clear()" (click)=" goToPage('login')">Log out</button>
-
-                    <a class="dropdown-item waves-light" mdbWavesEffect href="/login">Log in</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect href="#">My
+					account</a> <button class="dropdown-item waves-light" mdbWavesEffect href="/login" onclick="window.localStorage.clear()" (click)=" goToPage('login')">Log out</button> <a class="dropdown-item waves-light" mdbWavesEffect href="/login">Log in</a>
 
                 </div>
             </li>
@@ -58,7 +32,5 @@
         <!-- Links -->
     </links>
     <!-- Collapsible content -->
-
 </mdb-navbar>
 <!--/.Navbar-->
-
