--- a/frontend/src/app/landing-page/landing-page.component.html
+++ b/frontend/src/app/landing-page/landing-page.component.html
@@ -21,52 +21,53 @@
         <div class="splash">
             <h1 class="splash-head">GAME WITH US</h1>
             <p class="splash-subhead">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Arcade style gaming with scores and a global leaderboard. 
             </p>
             <p>
-                <a href="/pang" class="pure-button pure-button-primary">Get Started</a>
+                <a href="/pang" class="pure-button pure-button-primary">Let's play!</a>
             </p>
         </div>
     </div>
 
     <div class="content-wrapper">
         <div class="content">
-            <h2 class="content-head is-center">Excepteur sint occaecat cupidatat.</h2>
+            <h2 class="content-head is-center">Featuring Many Amazing Games</h2>
 
             <div class="pure-g">
                 <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
 
                     <h3 class="content-subhead">
-                        <i class="fa fa-rocket"></i> Get Started Quickly
+                        <i class="fa fa-arrows-v"></i> Pang!
                     </h3>
                     <p>
-                        Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                        Old school arcade style game.
                     </p>
                 </div>
                 <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
                     <h3 class="content-subhead">
-                        <i class="fa fa-mobile"></i> Responsive Layouts
+                        <i class="fa fa-table"></i> Tic Tac Toe
                     </h3>
                     <p>
-                        Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                        A beloved classic.
                     </p>
                 </div>
                 <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
                     <h3 class="content-subhead">
-                        <i class="fa fa-th-large"></i> Modular
+                        <i class="fa fa-th-large"></i> Tetrids
                     </h3>
                     <p>
-                        Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                        Gravity blocks.
                     </p>
                 </div>
                 <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
                     <h3 class="content-subhead">
-                        <i class="fa fa-check-square-o"></i> Plays Nice
+                        <i class="fa fa-star"></i> Flappy Birds
                     </h3>
                     <p>
-                        Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                        How far can you fly?
                     </p>
                 </div>
+                
             </div>
         </div>
 
@@ -85,7 +86,7 @@
         </div>
 
         <div class="content">
-            <h2 class="content-head is-center">Dolore magna aliqua. Uis aute irure.</h2>
+            <h2 class="content-head is-center">Sign up to access all of our games for free <3</h2>
 
             <div class="pure-g">
                 <div class="l-box-lrg pure-u-1 pure-u-md-2-5">
@@ -110,12 +111,12 @@
                 <div class="l-box-lrg pure-u-1 pure-u-md-3-5">
                     <h4>Contact Us</h4>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    	@SleuthGameCo
                     </p>
 
-                    <h4>More Information</h4>
+                    <h4>About us</h4>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Sleuth Game Co was founded by 4 developers who are passionate about gaming. 
                     </p>
                 </div>
             </div>
@@ -123,7 +124,7 @@
         </div>
 
         <div class="footer l-box is-center">
-            View the source of this layout to learn more. Made with love by the YUI Team.
+            Made with love by 4 guys at Revature.  
         </div>
 
     </div>
