small small styling

--- a/frontend/src/app/app-tic-tac-board/app-tic-tac-board.component.html
+++ b/frontend/src/app/app-tic-tac-board/app-tic-tac-board.component.html
@@ -7,7 +7,8 @@
             <p>Y wins: {{ lines }}</p>
             <canvas #next class="next"></canvas>
         </div>
-        <button (click)="init()" class="play-button">Reset</button>
+        <button (click)="init()" class="reset-button">Reset</button>
+        <br>
     </div>
 </div>
 <!--<div *ngif="clicked"> -->
