--- a/frontend/src/app/app-tic-tac-board/app-tic-tac-board.component.html
+++ b/frontend/src/app/app-tic-tac-board/app-tic-tac-board.component.html
@@ -3,8 +3,8 @@
     <div class="right-column">
         <div>
             <h1>Tic-Tac-Toe</h1>
-            <p>X wins: {{ points }}</p>
-            <p>Y wins: {{ lines }}</p>
+            <p>X wins: {{ this.xwins }}</p>
+            <p>Y wins: {{ this.ywins }}</p>
             <canvas #next class="next"></canvas>
         </div>
         <button (click)="init()" class="reset-button">Reset</button>
