--- a/frontend/src/app/score/score.component.html
+++ b/frontend/src/app/score/score.component.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-
+<p><strong><center>HERE'S YOUR SCORE SCRUB!</center></strong></p>
 <table class="table table-bordered" border="1">
     <thead></thead>
     <tr>
@@ -22,3 +22,4 @@
         </tr>
     </tbody>
 </table>
+
