--- a/frontend/src/app/floppybird/floppybird.component.html
+++ b/frontend/src/app/floppybird/floppybird.component.html
@@ -13,7 +13,8 @@
 
         </div>
         <p>Use the Arrow Keys to Move!.</p>
-        <button (click)="SendScore()"> post score </button>
+
 
     </div>
 </div>
+<button (click)="SendScore()" class="btn btn-danger"> post score </button>
