--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-primary text-left" font-family="Orbitron" [containerInside]="false">
+<mdb-navbar style="background-color:hsl(215, 39%, 27%); " SideClass="navbar navbar-expand-lg navbar-primary text-left" font-family="Orbitron" [containerInside]="false">
     <!-- Navbar brand -->
     <a class="navbar-brand mb-5" href="login"> <img src="../../assets/transparentBear.png" width="140" height="100" class="d-inline-block align-middle text-white" alt=""> Sleuth
     </a>
