--- a/frontend/src/app/tetris-board/tetris-board.component.html
+++ b/frontend/src/app/tetris-board/tetris-board.component.html
@@ -1,4 +1,4 @@
-<div class="grid">
+<div class="grid" style="margin:20%;">
     <canvas #board class="game-board"></canvas>
     <div class="right-column">
         <div>
@@ -11,5 +11,3 @@
         <button (click)="play()" class="play-button">Play</button>
     </div>
 </div>
-
-
