--- a/frontend/src/app/user/user.component.html
+++ b/frontend/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-<table class="table table-bordered" border="1">
+<table style="z-index: 9999;" class="table table-bordered" border="1" style="background-color: #005eb6;">
     <thead></thead>
     <tr>
         <th> Users </th>
