--- a/frontend/src/app/landing-page/landing-page.component.scss
+++ b/frontend/src/app/landing-page/landing-page.component.scss
@@ -26,6 +26,14 @@ label {
     color: #34495e;
 }
 
+.crsl {
+	width: auto;
+  height: 100%;
+  max-height: 225px;
+	line-content: center;
+	margin: auto;
+}
+
 .pure-img-responsive {
     max-width: 100%;
     height: auto;
