--- a/frontend/src/app/gamepage/gamepage.component.html
+++ b/frontend/src/app/gamepage/gamepage.component.html
@@ -25,65 +25,37 @@
                 <tbody>
                     <tr>
                         <th scope="row"></th>
-                        <td>Gravity Squares</td>
-                        <td>Pang</td>
-                        <td>Sanic the HogHedge</td>
+                        <td><a href="/tetris">Gravity Squares</a></td>
+                        <td><a href="/pang">Pang</a></td>
+                        <td><a href="/sonic">Sanic the HogHedge</a></td>
                     </tr>
                     <tr>
                         <th scope="row"></th>
-                        <td>FloppySquare</td>
-                        <td>TacTic</td>
+                        <td><a href="/floppy">FloppySquare</a></td>
+                        <td><a href="/tictac">TacTic</a></td>
                         <td></td>
                     </tr>
                     <tr>
                         <th scope="row"></th>
-                        <td>Dankey Kang</td>
+                        <td><a href="/donkeykong">Dankey Kang</a></td>
                         <td></td>
                         <td></td>
                     </tr>
                     <tr>
                         <th scope="row"></th>
-                        <td>Pacman</td>
+                        <td><a href="/pacman">Pacman</a></td>
                         <td></td>
                         <td></td>
                     </tr>
                 </tbody>
             </table>
 
-            <table class="table">
-                <thead class="thead-light">
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
-                    </tr>
-                </tbody>
-            </table>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+
+            <a href="/pacman" class="btn btn-primary">Random</a>
         </div>
         <div class="card-footer text-muted">
             2 days ago
         </div>
     </div>
 </div>
+<footer style="z-index: 9999; position: absolute;">2019 Sleuth Co. | DJ-RAY-KHANH-ILYA-GEORGE</footer>
