--- a/frontend/src/app/landing-page/landing-page.component.html
+++ b/frontend/src/app/landing-page/landing-page.component.html
@@ -1,21 +1,17 @@
 <head>
 
 
-<title>Landing Page &ndash; Layout Examples &ndash; Pure</title>
-<link rel="stylesheet"
-	href="https://unpkg.com/purecss@1.0.1/build/pure-min.css"
-	integrity="sha384-" crossorigin="anonymous">
+    <title>Landing Page &ndash; Layout Examples &ndash; Pure</title>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
 
-<!--[if lte IE 8]>
+    <!--[if lte IE 8]>
         <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/grids-responsive-old-ie-min.css">
     <![endif]-->
-<!--[if gt IE 8]><!-->
-<link rel="stylesheet"
-	href="https://unpkg.com/purecss@1.0.1/build/grids-responsive-min.css">
-<!--<![endif]-->
+    <!--[if gt IE 8]><!-->
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/grids-responsive-min.css">
+    <!--<![endif]-->
 
-<link rel="stylesheet"
-	href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 
 
 </head>
@@ -24,103 +20,98 @@
 
 
 
-	<div class="splash-container">
-		<div class="splash">
-			<h1 class="splash-head">GAME WITH US</h1>
-			<p class="splash-subhead">Arcade style gaming with scores and a
-				global leaderboard.</p>
-			<p>
-				<a href="/pang" class="pure-button pure-button-primary">Let's
+    <div class="splash-container">
+        <div class="splash">
+            <h1 class="splash-head">GAME WITH US</h1>
+            <p class="splash-subhead">Arcade style gaming with scores and a global leaderboard.</p>
+            <p>
+                <a href="/login" class="pure-button pure-button-primary">Let's
 					play!</a>
-			</p>
-		</div>
-	</div>
+            </p>
+        </div>
+    </div>
 
-	<div class="content-wrapper">
-		<div class="content">
-			<h2 class="content-head is-center">Featuring Many Amazing Games</h2>
+    <div class="content-wrapper">
+        <div class="content">
+            <h2 class="content-head is-center">Featuring Many Amazing Games</h2>
 
-			<div class="pure-g">
-				<div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+            <div class="pure-g">
+                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
 
-					<h3 class="content-subhead">
-						<i class="fa fa-arrows-v"></i> Pang!
-					</h3>
-					<p>Old school arcade style game.</p>
-				</div>
-				<div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-					<h3 class="content-subhead">
-						<i class="fa fa-table"></i> Tic Tac Toe
-					</h3>
-					<p>A beloved classic.</p>
-				</div>
-				<div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-					<h3 class="content-subhead">
-						<i class="fa fa-th-large"></i> Tetrids
-					</h3>
-					<p>Gravity blocks.</p>
-				</div>
-				<div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-					<h3 class="content-subhead">
-						<i class="fa fa-star"></i> Flappy Birds
-					</h3>
-					<p>How far can you fly?</p>
-				</div>
+                    <h3 class="content-subhead">
+                        <i class="fa fa-arrows-v"></i> Pang!
+                    </h3>
+                    <p>Old school arcade style game.</p>
+                </div>
+                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+                    <h3 class="content-subhead">
+                        <i class="fa fa-table"></i> Tic Tac Toe
+                    </h3>
+                    <p>A beloved classic.</p>
+                </div>
+                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+                    <h3 class="content-subhead">
+                        <i class="fa fa-th-large"></i> Tetrids
+                    </h3>
+                    <p>Gravity blocks.</p>
+                </div>
+                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+                    <h3 class="content-subhead">
+                        <i class="fa fa-star"></i> Flappy Birds
+                    </h3>
+                    <p>How far can you fly?</p>
+                </div>
 
-			</div>
-		</div>
+            </div>
+        </div>
 
 
-		<!-- Carousel 2 -->
-		<mdb-carousel [animation]="'slide'"> <mdb-carousel-item>
-		<img class="crsl" src="../../assets/flappySshot.png"
-			alt="First slide"> </mdb-carousel-item>  <mdb-carousel-item> <img
-			class="crsl" src="../../assets/tetrisSshot.png"
-			alt="Third slide"> </mdb-carousel-item> <mdb-carousel-item> <img
-			class="crsl" src="../../assets/pangSshot.png"
-			alt="Fourth slide"> </mdb-carousel-item> <mdb-carousel-item> <img
-			class="crsl" src="../../assets/donkeySshot.png"
-			alt="Fifth slide"> </mdb-carousel-item> <mdb-carousel-item> <img
-			class="crsl" src="../../assets/ticTacsShot.png"
-			alt="Sixth slide"> </mdb-carousel-item> </mdb-carousel>
+        <!-- Carousel 2 -->
+        <mdb-carousel [animation]="'slide'">
+            <mdb-carousel-item>
+                <img class="crsl" src="../../assets/flappySshot.png" alt="First slide"> </mdb-carousel-item>
+            <mdb-carousel-item> <img class="crsl" src="../../assets/tetrisSshot.png" alt="Third slide"> </mdb-carousel-item>
+            <mdb-carousel-item> <img class="crsl" src="../../assets/pangSshot.png" alt="Fourth slide"> </mdb-carousel-item>
+            <mdb-carousel-item> <img class="crsl" src="../../assets/donkeySshot.png" alt="Fifth slide"> </mdb-carousel-item>
+            <mdb-carousel-item> <img class="crsl" src="../../assets/ticTacsShot.png" alt="Sixth slide"> </mdb-carousel-item>
+        </mdb-carousel>
 
-		<!-- End Carousel 2 -->
+        <!-- End Carousel 2 -->
 
 
 
-		  <div class="content">
-                <h2 class="content-head is-center">Sign up to access all of our games for free.</h2>
+        <div class="content">
+            <h2 class="content-head is-center">Sign up to access all of our games for free.</h2>
 
-                <div class="pure-g">
-                    <div class="l-box-lrg pure-u-1 pure-u-md-2-5">
-                        <form class="pure-form pure-form-stacked">
-                            <fieldset>
+            <div class="pure-g">
+                <div class="l-box-lrg pure-u-1 pure-u-md-2-5">
+                    <form class="pure-form pure-form-stacked">
+                        <fieldset>
 
-                                <label for="name">Your Name</label> <input id="name" [(ngModel)]="username" type="username" name="username" required placeholder="Your UserName">
+                            <label for="name">Your Name</label> <input id="name" [(ngModel)]="username" type="username" name="username" required placeholder="Your UserName">
 
-                                <label for="password">Your Password</label> <input id="password" [(ngModel)]="password" type="password" name="password" required placeholder="Your Password">
+                            <label for="password">Your Password</label> <input id="password" [(ngModel)]="password" type="password" name="password" required placeholder="Your Password">
 
-                                <button type="submit" class="pure-button" (click)="signup()">Sign Up</button>
-                            </fieldset>
-                        </form>
-                    </div>
+                            <button type="submit" class="pure-button" (click)="signup()">Sign Up</button>
+                        </fieldset>
+                    </form>
+                </div>
 
-				<div class="l-box-lrg pure-u-1 pure-u-md-3-5">
-					<h4>Contact Us</h4>
-					<p>@SleuthGameCo</p>
+                <div class="l-box-lrg pure-u-1 pure-u-md-3-5">
+                    <h4>Contact Us</h4>
+                    <p>@SleuthGameCo</p>
 
-					<h4>About us</h4>
-					<p>Sleuth Game Co was founded by 5 developers who are
-						passionate about gaming.</p>
-				</div>
-			</div>
+                    <h4>About us</h4>
+                    <p>Sleuth Game Co was founded by 5 developers who are passionate about gaming.</p>
+                </div>
+            </div>
 
-		</div>
+        </div>
 
-		<div class="footer l-box is-center">Made with love by 5 guys at
-			Revature.</div>
+        <div class="footer l-box is-center">Made with love by 5 guys at Revature.
+        </div>
 
-	</div>
+    </div>
 
 
 
