--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -7,26 +7,30 @@
     <links>
         <!-- Links -->
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link waves-light" mdbWavesEffect>
-                    <mdb-icon fas icon="envelope"></mdb-icon> Contact<span class="sr-only">(current)</span></a>
-            </li>
             <li class="nav-item">
-                <a class="nav-link waves-light" mdbWavesEffect>
-                    <mdb-icon fas icon="cog"></mdb-icon> Settings
+                <a class="nav-link waves-light" href="/leaderboard" mdbWavesEffect>
+                    <mdb-icon fas icon="star"></mdb-icon> Leaderboard
                 </a>
-            </li>
+                <li class="nav-item active">
+                    <a class="nav-link waves-light" mdbWavesEffect>
+                        <mdb-icon fas icon="envelope"></mdb-icon> Contact<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link waves-light" mdbWavesEffect>
+                        <mdb-icon fas icon="cog"></mdb-icon> Settings
+                    </a>
+                </li>
 
-            <!-- Dropdown -->
-            <li class="nav-item dropdown" dropdown>
-                <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-                    <mdb-icon fas icon="user"></mdb-icon> Profile<span class="caret"></span></a>
-                <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
-                    <a class="dropdown-item waves-light" mdbWavesEffect href="#">My
+                <!-- Dropdown -->
+                <li class="nav-item dropdown" dropdown>
+                    <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
+                        <mdb-icon fas icon="user"></mdb-icon> Profile<span class="caret"></span></a>
+                    <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
+                        <a class="dropdown-item waves-light" mdbWavesEffect href="#">My
 					account</a> <button class="dropdown-item waves-light" mdbWavesEffect href="/login" onclick="window.localStorage.clear()" (click)=" goToPage('login')">Log out</button> <a class="dropdown-item waves-light" mdbWavesEffect href="/login">Log in</a>
 
-                </div>
-            </li>
+                    </div>
+                </li>
 
         </ul>
         <!-- Links -->
