--- a/frontend/src/app/floppybird/floppybird.component.html
+++ b/frontend/src/app/floppybird/floppybird.component.html
@@ -1,20 +1,19 @@
-<div></div>
-
-<div class="game">
-    <div class="toggle-panel card">
-
-
-
-        <div class="card-body" id="game">
+<div class="card">
+    <div class="game">
+        <div class="toggle-panel card">
 
 
 
+            <div class="card-body" id="game">
+
+
+
+
+
+            </div>
+            <p>Use the Arrow Keys to Move!.</p>
 
 
         </div>
-        <p>Use the Arrow Keys to Move!.</p>
-
-
     </div>
-</div>
-<button (click)="SendScore()" class="btn btn-danger"> post score </button>
+    <button (click)="SendScore()" class="btn btn-danger"> post score </button></div>
