--- a/frontend/src/app/donkeykong/donkeykong.component.html
+++ b/frontend/src/app/donkeykong/donkeykong.component.html
@@ -1,1 +1,1 @@
-<iframe src="https://funhtml5games.com?embed=donkeykong" style="width:448px;height:512px;border:none;" frameborder="0" scrolling="no"></iframe>
+<div class="card"></div><iframe src="https://funhtml5games.com?embed=donkeykong" style="width:448px;height:512px;border:none;" frameborder="0" scrolling="no"></iframe>
