--- a/frontend/src/app/landing-page/landing-page.component.html
+++ b/frontend/src/app/landing-page/landing-page.component.html
@@ -84,7 +84,7 @@
             <h2 class="content-head is-center">Sign up to access all of our games for free.</h2>
 
             <div class="pure-g">
-                <div class="l-box-lrg pure-u-1 pure-u-md-2-5">
+                <div *ngIf="notLoggedIn" class="l-box-lrg pure-u-1 pure-u-md-2-5">
                     <form class="pure-form pure-form-stacked">
                         <fieldset>
 
