--- a/frontend/src/app/sonic/sonic.component.scss
+++ b/frontend/src/app/sonic/sonic.component.scss
@@ -1,8 +1,7 @@
 iframe {
-    overflow: hidden;
-    position: fixed;
-    margin: 40%;
+    margin: 20%;
     margin-top: 20%;
+    margin-left: 35%;
     canvas {
         min-width: 700px !important;
         height: auto !important;
